# tsfp_simchase_optimizer

./: .gitignore  Dockerfile  README.md  analysis_functions.py  compute_functions.py  docker-compose.yml  figure_functions.py  gui.py  main.py  optimal_table_computation.ipynb  pyproject.toml  tSFP_notebook.ipynb  tsfp_simchase_optimizer.ipynb
.github/workflows/: sync-workflow.yaml
data/: basic_optimal_table.csv
data/default/tables/: full_Q_table.csv  optimal_Q_table.csv
rules/default/: action_probs.csv  actions.csv  convince.csv  rounds.csv
writeup/: writeup.tex
